Bilderformatierung Bootstrap (Ignorieren)

--- a/css/ConGaming.css
+++ b/css/ConGaming.css
@@ -46,11 +46,16 @@ figure {
 }
 figure img {
   vertical-align: top;
+
+  width: 300px;
+  height: 300px;
 }
+
 figure figcaption {
   border: 1px blue;
   text-align: center;
 }
+
 
 * {
   outline: none;
