--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
 }
 
 .parent-container {
-  position: fixed;
+  position:absolute;
   min-height:100%;
   overflow: hidden;
 }
@@ -20,14 +20,12 @@ body{
   transform: translateX(-50%) translateY(-50%);
 }
 
+
+
 p{
   text-align: center;
   color: white;
 }
-
-
-
-
 
 * {
   outline: none;
@@ -77,7 +75,7 @@ main h2 span {
 main p {
   line-height: 1.5;
   font-weight: 200;
-  margin: 20px 0;
+  margin: 20px;
 }
 
 main small {
@@ -86,11 +84,12 @@ main small {
 }
 
 #nav-container {
-  position: fixed;
+  position:absolute;
   height: 100vh;
   width: 100%;
   pointer-events: none;
 }
+
 #nav-container .bg {
   position: absolute;
   top: 70px;
@@ -102,6 +101,7 @@ main small {
   transition: .3s;
   background: #000;
 }
+
 #nav-container:focus-within .bg {
   visibility: visible;
   opacity: .6;
@@ -128,6 +128,7 @@ main small {
   touch-action: manipulation;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
 .icon-bar {
   display: block;
   width: 100%;
@@ -135,6 +136,7 @@ main small {
   background: gray;
   transition: .3s;
 }
+
 .icon-bar + .icon-bar {
   margin-top: 5px;
 }
@@ -207,11 +209,6 @@ main small {
 #nav-container:focus-within #nav-content {
   transform: none;
 }
-
-
-
-
-
 
 * {
   box-sizing: border-box;
